@@ -2,31 +2,24 @@ package fr.insee.rmes.integration.authorizations;
 
 import fr.insee.rmes.bauhaus_services.OperationsDocumentationsService;
 import fr.insee.rmes.bauhaus_services.OperationsService;
-import fr.insee.rmes.bauhaus_services.StampAuthorizationChecker;
-import fr.insee.rmes.config.Config;
-import fr.insee.rmes.config.auth.UserProviderFromSecurityContext;
-import fr.insee.rmes.config.auth.roles.Roles;
-import fr.insee.rmes.config.auth.security.BauhausMethodSecurityExpressionHandler;
-import fr.insee.rmes.config.auth.security.CommonSecurityConfiguration;
-import fr.insee.rmes.config.auth.security.DefaultSecurityContext;
-import fr.insee.rmes.config.auth.security.OpenIDConnectSecurityContext;
-import fr.insee.rmes.config.auth.user.Stamp;
+import fr.insee.rmes.integration.AbstractResourcesEnvProd;
+import fr.insee.rmes.rbac.RBAC;
 import fr.insee.rmes.webservice.operations.SeriesResources;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
-import org.mockito.Mockito;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.stream.Stream;
 
 import static fr.insee.rmes.integration.authorizations.TokenForTestsConfiguration.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
@@ -43,13 +36,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
                 "logging.level.fr.insee.rmes.config.auth=TRACE",
                 "fr.insee.rmes.bauhaus.activeModules=operations"}
 )
-@Import({Config.class,
-        OpenIDConnectSecurityContext.class,
-        DefaultSecurityContext.class,
-        CommonSecurityConfiguration.class,
-        UserProviderFromSecurityContext.class,
-        BauhausMethodSecurityExpressionHandler.class})
-class TestSeriesResourcesEnvProd {
+class TestSeriesResourcesEnvProd extends AbstractResourcesEnvProd  {
 
     @Autowired
     private MockMvc mvc;
@@ -60,105 +47,78 @@ class TestSeriesResourcesEnvProd {
     @MockitoBean
     protected OperationsDocumentationsService documentationsService;
 
-    @MockitoBean
-    StampAuthorizationChecker stampAuthorizationChecker;
-
-    @MockitoBean
-    private JwtDecoder jwtDecoder;
-
     private final String idep = "xxxxux";
     private final String timbre = "XX59-YYY";
     int seriesId = 10;
 
-    @ValueSource(strings = {
-            "/operations/series/",
-            "/operations/series/withSims",
-            "/operations/series/1",
-            "/operations/series/advanced-search",
-            "/operations/series/advanced-search/stamp",
-            "/operations/series/1/operationsWithReport",
-            "/operations/series/1/operationsWithoutReport"
-    })
+    private static Stream<Arguments> provideDataForGetEndpoints() {
+        return Stream.of(
+                Arguments.of("/operations/series/", 200, true, true),
+                Arguments.of("/operations/series/withSims", 200, true, true),
+                Arguments.of("/operations/series/1", 200, true, true),
+                Arguments.of("/operations/series/advanced-search", 200, true, true),
+                Arguments.of("/operations/series/advanced-search/stamp", 200, true, true),
+                Arguments.of("/operations/series/1/operationsWithReport", 200, true, true),
+                Arguments.of("/operations/series/1/operationsWithoutReport", 200, true, true),
+
+                Arguments.of("/operations/series/", 403, true, false),
+                Arguments.of("/operations/series/withSims", 403, true, false),
+                Arguments.of("/operations/series/1", 403, true, false),
+                Arguments.of("/operations/series/advanced-search", 403, true, false),
+                Arguments.of("/operations/series/advanced-search/stamp", 403, true, false),
+                Arguments.of("/operations/series/1/operationsWithReport", 403, true, false),
+                Arguments.of("/operations/series/1/operationsWithoutReport", 403, true, false),
+
+                Arguments.of("/operations/series/", 401, false, true),
+                Arguments.of("/operations/series/withSims", 401, false, true),
+                Arguments.of("/operations/series/1", 401, false, true),
+                Arguments.of("/operations/series/advanced-search", 401, false, true),
+                Arguments.of("/operations/series/advanced-search/stamp", 401, false, true),
+                Arguments.of("/operations/series/1/operationsWithReport", 401, false, true),
+                Arguments.of("/operations/series/1/operationsWithoutReport", 401, false, true)
+        );
+    }
+
+
+    @MethodSource("provideDataForGetEndpoints")
     @ParameterizedTest
-    void getWithAdmin_Ok(String url) throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(get(url).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+    void getSeries(String url, Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.OPERATION_SERIES.toString()), eq(RBAC.Privilege.READ.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = get(url).contentType(MediaType.APPLICATION_JSON).accept(MediaType.APPLICATION_JSON);
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
     }
 
-    @ValueSource(strings = {
-            "/operations/series/",
-            "/operations/series/withSims",
-            "/operations/series/1",
-            "/operations/series/advanced-search",
-            "/operations/series/advanced-search/stamp",
-            "/operations/series/1/operationsWithReport",
-            "/operations/series/1/operationsWithoutReport"
-    })
+    private static Stream<Arguments> provideDataForPutEndpoints() {
+        return Stream.of(
+                Arguments.of(200, true, true),
+
+                Arguments.of(403, true, false)
+        );
+    }
+
+
+    @MethodSource("provideDataForPutEndpoints")
     @ParameterizedTest
-    void getWithContributor_Ok(String url) throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.SERIES_CONTRIBUTOR));
-        mvc.perform(get(url).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+    void updateSeries(Integer code, boolean withBearer, boolean hasAccessReturn) throws Exception {
+        when(checker.hasAccess(eq(RBAC.Module.OPERATION_SERIES.toString()), eq(RBAC.Privilege.UPDATE.toString()), any(), any())).thenReturn(hasAccessReturn);
+        configureJwtDecoderMock(jwtDecoder, idep, timbre, Collections.emptyList());
+
+        var request = put("/operations/series/1").header("Authorization", "Bearer toto")
+                .contentType(MediaType.APPLICATION_JSON)
+                .accept(MediaType.APPLICATION_JSON)
+                .content("{\"id\": \"1\"}");
+
+        if(withBearer){
+            request.header("Authorization", "Bearer toto");
+        }
+
+        mvc.perform(request).andExpect(status().is(code));
     }
-
-    @Test
-    void putSeriesAdmin_ok() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.ADMIN));
-        mvc.perform(put("/operations/series/" + seriesId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void putSeriesAsSeriesContributor_ok() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.SERIES_CONTRIBUTOR));
-        when(stampAuthorizationChecker.isSeriesManagerWithStamp(String.valueOf(seriesId),new Stamp(timbre))).thenReturn(true);
-
-        mvc.perform(put("/operations/series/" + seriesId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isOk());
-        Mockito.verify(stampAuthorizationChecker).isSeriesManagerWithStamp(String.valueOf(seriesId),new Stamp(timbre));
-    }
-
-    @Test
-    void putSeriesAsSeriesContributor_badSerieTimbre() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of(Roles.SERIES_CONTRIBUTOR));
-        when(stampAuthorizationChecker.isSeriesManagerWithStamp(String.valueOf(seriesId),new Stamp(timbre))).thenReturn(false);
-
-        mvc.perform(put("/operations/series/" + seriesId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-        Mockito.verify(stampAuthorizationChecker).isSeriesManagerWithStamp(String.valueOf(seriesId),new Stamp(timbre));
-    }
-
-    @Test
-    void putSeriesAsSeriesContributor_noAuth() throws Exception {
-        mvc.perform(put("/operations/series/" + seriesId)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isUnauthorized());
-    }
-
-    @Test
-    void putSeriesAsNotSeriesContributor() throws Exception {
-        configureJwtDecoderMock(jwtDecoder, idep, timbre, List.of("mauvais rôle"));
-        mvc.perform(put("/operations/series/" + seriesId).header("Authorization", "Bearer toto")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .content("{\"id\": \"1\"}"))
-                .andExpect(status().isForbidden());
-    }
-
 }
